# AAAI-26

./: Dockerfile  README.md  compose.yaml
openfhe-gpu/: .gitignore  CMakeLists.txt  simple_test.cpp
openfhe-gpu/python/: CMakeLists.txt  encrypted_mlp_breast_cancer.py  mlp.py  openfhe_gpu_pybind.cpp
openfhe-gpu/scripts/setup/: NTL_and_GMP_install.sh  linux_platform_packages.sh
openfhe-gpu/src/pke/examples/: advanced-ckks-bootstrapping-gpu.cpp
